# OOP_practice

MDI/Project/: PassengerTrain.h  PassengerTrainDialog.cpp  PassengerTrainDialog.h  PassengerTrainDialog.ui  Plain.cpp  Plain.h  PlainDialog.cpp  PlainDialog.h  PlainDialog.ui  Project.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
MDI/Project2/: Base.cpp  CreatePlain.cpp  CreatePlain.h  CreatePlain.ui  CreateTrain.cpp  CreateTrain.h  CreateTrain.ui  PassengerTrain.h  Plain.h  Project2.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  showPlain.cpp  showPlain.h  showPlain.ui  showTrain.cpp  showTrain.h  showTrain.ui  sqlitedbmanager.cpp  sqlitedbmanager.h
PassengerTrain/: PassengerTrain.cpp  PassengerTrain.h  PassengerTrain.pro  main.cpp
Project/: Base.h  PassengerTrain.cpp  PassengerTrain.h  PassengerTrain.pro  Plain.cpp  main.cpp
Project2/: CMakeLists.txt
Project2/Project/: Base.cpp  Base.h  PassengerTrain.cpp  PassengerTrain.h  Plain.cpp  Plain.h  Project.pro  Vector.h  Vector.tpp  main.cpp
SDI/Project/: PassengerTrain.cpp  PassengerTrain.h  Project.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
